kubernetes/apps/storage/longhorn/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: storage
spec:
  parentRefs:
    - name: envoy-internal # Wir nehmen internal, falls du es nur im Heimnetz willst
      namespace: network
  hostnames:
    - longhorn.schloschi.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
